--- a/SkEditorPlus/App.xaml
+++ b/SkEditorPlus/App.xaml
@@ -19,6 +19,7 @@
                 <ResourceDictionary Source="/Styles/ScrollViewerStyle.xaml"/>
                 <ResourceDictionary Source="/Styles/ListBoxStyle.xaml"/>
                 <ResourceDictionary Source="/Styles/ButtonStyle.xaml"/>
+                <ResourceDictionary Source="/Styles/SmallButtonStyle.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/Languages/English.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
