--- a/SkEditorPlus/Windows/GenerateWindow.xaml
+++ b/SkEditorPlus/Windows/GenerateWindow.xaml
@@ -8,11 +8,21 @@
         mc:Ignorable="d"
         Title="{DynamicResource GenerateWindowTitle}" Height="425" Width="305"  ResizeMode="NoResize" WindowStartupLocation="CenterScreen" KeyUp="OnKey">
     <Grid>
-        <TextBlock HorizontalAlignment="Center" Margin="0,19,0,0" TextWrapping="Wrap" Text="{DynamicResource WhatDoYouWantToGenerate}" VerticalAlignment="Top" FontSize="22" FontFamily="Cascadia Mono" Width="305" TextAlignment="Center" Height="57"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
-        <Button x:Name="commandButton" Content="{DynamicResource CommandButton}" HorizontalAlignment="Left" Margin="45,99,10,0" VerticalAlignment="Top" Click="CommandClick" Width="auto" MinWidth="80"/>
-        <Button x:Name="guiButton" Content="{DynamicResource GUIButton}" MinWidth="80" HorizontalAlignment="Right" Margin="10,99,45,0" VerticalAlignment="Top" Width="auto" Click="GUIClick"/>
-        <Button x:Name="eventButton" Content="???" Margin="0,160,0,0" VerticalAlignment="Top" Click="EventClick" Width="auto" MinWidth="72" RenderTransformOrigin="0.456,-1.305" IsEnabled="False"/>
+        <TextBlock Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,19,0,0" TextWrapping="Wrap" Text="{DynamicResource WhatDoYouWantToGenerate}" FontSize="22" FontFamily="Cascadia Mono" Width="305" TextAlignment="Center" Height="57"/>
+
+        <Grid Grid.Row="1" Margin="0,50,0,0">
+            <Button x:Name="commandButton" HorizontalAlignment="Left"  Margin="40,0,0,0" Content="{DynamicResource CommandButton}" Click="CommandClick" Width="auto" MinWidth="80"/>
+            <Button x:Name="guiButton" HorizontalAlignment="Right" Margin="0,0,40,0" Content="{DynamicResource GUIButton}" MinWidth="80" Width="auto" Click="GUIClick"/>
+        </Grid>
+
+
+        <Button x:Name="particleButton" Grid.Row="2" Margin="0,30,0,0" Content="???" Click="ParticleClick" Width="auto" MinWidth="80" IsEnabled="False"/>
 
     </Grid>
 </hc:Window>
